# f1-telegram-fantasy-bot

./: .dockerignore  .env.default  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  credentials.py  main.py  pyproject.toml  requirements.txt  telegram-bot.py  telegram_bot.py  uc_driver.py  useful_api.txt
.github/workflows/: ci-cd.yaml
src/: constants.py  http_client.py  http_server.py  logger.py  main.py  telegram_bot.py  uc_driver.py
src/adapters/: leaderboard_adapters.py  picked_player_adapters.py  picked_team_adapters.py  season_adapters.py  user_adapters.py
src/adapters/persistence/: jobstore.py
src/bot/: handlers.py  telegram_bot.py  telegram_command.py
src/core/: configuration.py  credentials.py  error.py  leaderboard_entrants.py  league_standing.py  picked_player.py  picked_team.py  race.py  user.py
src/services/: f1_fantasy_service.py
src/utils/: http.py
