[tool.poetry]
name = "f1-telegram-fantasy-bot"
version = "0.1.0"
description = "Telegram Bot for F1 Fantasy"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.2.0"
python-dotenv = "^0.20.0"
undetected-chromedriver = "^3.1.5"
selenium-wire = "^4.6.4"
python-telegram-bot = "^20.0a0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
